[FIX] change id for userUuid in user routes and use missing middleware
