# src/config/swagger/swagger_prod.json
@@ -849,7 +849,7 @@
         }
       }
     },
-    "/users/{id}/admin": {
+    "/users/{userUuid}/admin": {
       "patch": {
         "tags": ["User"],
         "summary": "Grant or revoke admin privileges to user ----- ONLY ADMIN",
@@ -861,7 +861,7 @@
         },
         "parameters": [
           {
-            "name": "id",
+            "name": "userUuid",
             "in": "path",
             "type": "string",
             "description": "User Id",
@@ -915,7 +915,7 @@
         }
       }
     },
-    "/users/{id}": {
+    "/users/{userUuid}": {
       "put": {
         "tags": ["User"],
         "summary": "Edit user profile only if it is your profile ----- ONLY AUTH USERS",
@@ -928,7 +928,7 @@
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "id",
+            "name": "userUuid",
             "in": "path",
             "type": "string",
             "description": "User Id",
@@ -991,7 +991,7 @@
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "id",
+            "name": "userUuid",
             "in": "path",
             "type": "string",
             "description": "User Id",
