# src/controllers/user.controller.js
@@ -37,27 +37,16 @@ const deleteUser = async (req, res) => {
 
 const updateUser = async (req, res) => {
   const {
-    user: { _id: userId, role: userRole },
+    body,
+    params: { userUuid },
   } = req;
-  const { body } = req;
 
   //trying to edit password
   if (body.password && body.passwordConfirmation) {
-    if (body.password != body.passwordConfirmation)
-      throw Error('The passwords do not match!');
-  }
+    if (body.password !== body.passwordConfirmation) {
+      throw new Error('The passwords do not match!');
+    }
 
-  let { user } = res.locals;
-
-  if (user.id != userId && userRole == 0) {
-    // a regular user is trying to edit other user profile
-    const err = new Error('Unauthorized - This is not your profile');
-    err.status = 403;
-    throw err;
-  }
-
-  //trying to edit password
-  if (body.password && body.passwordConfirmation) {
     const { password: pass } = body;
     const hashedPass = hashPassword(pass);
     body.password = hashedPass;
@@ -66,7 +55,7 @@ const updateUser = async (req, res) => {
 
   if (body.role) delete body.role;
 
-  user = await UserService.editOneUser(user.id, body);
+  const user = await UserService.editOneUser(userUuid, body);
 
   res.status(200).json({
     status: 'success',
