# src/middlewares/resources/user.middleware.js
@@ -1,8 +1,8 @@
 const { UserService } = require('../../services');
 
 const loadUser = async (req, res, next) => {
-  const { id } = req.params;
-  const user = await UserService.getOneUserById(id);
+  const { userUuid } = req.params;
+  const user = await UserService.getOneUserById(userUuid);
 
   if (!user) {
     const err = new Error('User not found');
@@ -14,4 +14,18 @@ const loadUser = async (req, res, next) => {
   next();
 };
 
-module.exports = { loadUser };
+const canEditUser = async (req, res, next) => {
+  const { user: authUser } = req;
+  const { user } = res.locals;
+
+  if (user.id !== authUser._id && authUser.role === 0) {
+    // a regular user is trying to edit other user profile
+    const err = new Error('Unauthorized - This is not your profile');
+    err.status = 403;
+    throw err;
+  }
+
+  next();
+};
+
+module.exports = { loadUser, canEditUser };
